<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>run.mone</groupId>
    <artifactId>jcommon</artifactId>
    <version>1.4-jdk20-SNAPSHOT</version>
  </parent>
  <artifactId>jmonitor</artifactId>
  <dependencies>

  </dependencies>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <source>20</source>
          <target>20</target>
          <encoding>UTF-8</encoding>
          <compilerArgs>
            <arg>--add-modules=jdk.jcmd</arg>
            <arg>--add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED</arg>
            <arg>--add-exports=jdk.jcmd/sun.tools.jps=ALL-UNNAMED</arg>
            <arg>--add-exports=jdk.jcmd/sun.tools.jstat=ALL-UNNAMED</arg>
            <arg>--add-exports=jdk.jcmd/sun.tools.jstack=ALL-UNNAMED</arg>
          </compilerArgs>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
